[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="LeftButton" type="Button" parent="."]
anchor_top = 0.096
anchor_right = 0.241
anchor_bottom = 0.151
margin_left = 711.0
margin_top = 339.4
margin_right = 516.216
margin_bottom = 353.4
text = "L"

[node name="RightButton" type="Button" parent="."]
anchor_right = 0.016
anchor_bottom = 0.027
margin_left = 790.0
margin_top = 397.0
margin_right = 826.616
margin_bottom = 429.8
text = "R"

[node name="JumpButton" type="Button" parent="."]
margin_left = 711.0
margin_top = 324.0
margin_right = 832.0
margin_bottom = 382.0
text = "Jump"

[connection signal="button_down" from="LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_up" from="LeftButton" to="." method="_on_LeftButton_button_up"]
[connection signal="button_down" from="RightButton" to="." method="_on_RightButton_button_down"]
[connection signal="button_up" from="RightButton" to="." method="_on_RightButton_button_up"]
[connection signal="button_down" from="JumpButton" to="." method="_on_JumpButton_button_down"]
